; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dxof/extr_parsing.c_parse_template_parts.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dxof/extr_parsing.c_parse_template_parts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TOKEN_OBRACKET = common dso_local global i64 0, align 8
@TOKEN_CBRACKET = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @parse_template_parts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_template_parts(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @parse_template_members_list(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %2, align 4
  br label %32

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @check_TOKEN(i32* %10)
  %12 = load i64, i64* @TOKEN_OBRACKET, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %30

14:                                               ; preds = %9
  %15 = load i32*, i32** %3, align 8
  %16 = call i64 @get_TOKEN(i32* %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @parse_template_option_info(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %14
  %21 = load i32, i32* @FALSE, align 4
  store i32 %21, i32* %2, align 4
  br label %32

22:                                               ; preds = %14
  %23 = load i32*, i32** %3, align 8
  %24 = call i64 @get_TOKEN(i32* %23)
  %25 = load i64, i64* @TOKEN_CBRACKET, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %2, align 4
  br label %32

29:                                               ; preds = %22
  br label %30

30:                                               ; preds = %29, %9
  %31 = load i32, i32* @TRUE, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %30, %27, %20, %7
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @parse_template_members_list(i32*) #1

declare dso_local i64 @check_TOKEN(i32*) #1

declare dso_local i64 @get_TOKEN(i32*) #1

declare dso_local i32 @parse_template_option_info(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
